some designs added

--- a/classroom.css
+++ b/classroom.css
@@ -1,8 +1,9 @@
 .main-box{
-    #background: darkorchid;
     margin: -1%;
-
+    background-image: url('techm1.jpg');
+    width:100%
 }
+
 #headi{
     color: rgb(251, 252, 249);
     margin: 2%;
@@ -13,24 +14,23 @@
 .headding{
     width: 100%;
     height: 7%;
-    background: red;
-    
+    background: red;    
 }
+
 .box-1{
     
     width: 80%;
     height: 600px;
     margin-left: 25%;
 }
+
 .box-sub{
-    #background: rgb(40, 212, 97);
     width: 100%;
     height: 700px;
     margin: 1%;
 }
 
 .box-2{
-    #background:brown;
     width: 25.4%;
     height: 350px;
     margin-top: -400px;
@@ -39,12 +39,10 @@
 .box-3{
     width: 82%;
     height: 100px;
-    #background: chartreuse;
     margin-left: 20%;
     margin-top: 12%;
 }
 .box-4{
-    #background:rgb(122, 222, 235);
     width: 25.4%;
     height: 255px;
     margin-top: -21%;
