--- a/classroom.css
+++ b/classroom.css
@@ -1,11 +1,13 @@
 .main-box{
+   
+    background: rgb(71, 71, 71);
     margin: -1%;
-    background-image: url('techm1.jpg');
-    width:100%
+    height: 1200px;
+    
 }
 
 #headi{
-    color: rgb(251, 252, 249);
+    color: rgb(248, 250, 248);
     margin: 2%;
     font-size: 50px;
     margin-left: 8%;
@@ -13,8 +15,9 @@
 }
 .headding{
     width: 100%;
-    height: 7%;
-    background: red;    
+    height: 11%;
+    background: rgb(107,50,3);
+    background: linear-gradient(360deg, rgb(68, 57, 47) 0%, rgba(241,16,16,1) 50%, rgb(58, 56, 56) 110%);   
 }
 
 .box-1{
@@ -26,7 +29,7 @@
 
 .box-sub{
     width: 100%;
-    height: 700px;
+    height: 900px;
     margin: 1%;
 }
 
@@ -37,10 +40,10 @@
     
 }
 .box-3{
-    width: 82%;
+    width: 100%;
     height: 100px;
     margin-left: 20%;
-    margin-top: 12%;
+    margin-top: -15%;
 }
 .box-4{
     width: 25.4%;
